Fix moving hotspots when expand/collapse tree in Simple template

--- a/src/css/hint.less
+++ b/src/css/hint.less
@@ -106,7 +106,7 @@
             .hotspot-on-image-container{
                 text-align: center;
 				
-				hotspotOnImage {
+				& > span {
 					line-height: 0;
 				}
             }
